--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -3,3 +3,18 @@
 {% block header %}
 Product page
 {% endblock %}
+
+{% block content %}
+<table class="table table-bordered table-hover">
+    <tr>
+        <th>Id</th>
+        <th>Name</th>
+    </tr>
+    {% for d in data %}
+    <tr>
+        <td>{{d.id}}</td>
+        <td>{{d.name}}</td>
+    </tr>
+    {% endfor %}
+</table>
+{% endblock %}
