--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,15 +20,9 @@
             {% endblock %}
         </h1>
     </header>
-    <table>
-        {% block table_head %}
-
-        {% endblock %}
-
-        {% block data %}
-
-        {% endblock %}
-    </table>
+    <div class="container">
+        {% block content %}{% endblock %}
+    </div>
 </body>
 
 </html>
