--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -5,13 +5,13 @@
                 <a class="nav-link active" href="/">Logo</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{url_for('route', type='user')}}">Users</a>
+                <a class="nav-link" href="{{url_for('user')}}">Users</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{url_for('route', type='category')}}">Categories</a>
+                <a class="nav-link" href="{{url_for('category')}}">Categories</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{url_for('route', type='product')}}">Products</a>
+                <a class="nav-link" href="{{url_for('product')}}">Products</a>
             </li>
         </ul>
     </div>
