finish feature add models

--- a/app/templates/category.html
+++ b/app/templates/category.html
@@ -6,7 +6,7 @@ Category page
 
 
 {% block content %}
-<form action="category.html" method="POST" class="py-3">
+<form action="" method="POST" class="py-3">
 
     <div class="form_group my-3">
         <label for="category">Loại sản phẩm</label>
